--- a/.env.qa
+++ b/.env.qa
@@ -1,2 +1,5 @@
 VUE_APP_COSMOS_XP_ADDRESS=https://qa.cosmosplorer.bianjie.ai
 VUE_APP_IRIS_XP_ADDRESS=https://qaexplorer.bianjie.ai
+VUE_APP_NODE_SERVER_URI=
+VUE_APP_GO_SERVER_URI =
+VUE_APP_LCD_URI=
