--- a/.env.testnet
+++ b/.env.testnet
@@ -1,2 +1,5 @@
 VUE_APP_COSMOS_XP_ADDRESS=https://stargate.iobscan.io
 VUE_APP_IRIS_XP_ADDRESS=https://nyancat.iobscan.io
+VUE_APP_NODE_SERVER_URI=
+VUE_APP_GO_SERVER_URI =
+VUE_APP_LCD_URI=
